# cuda

./: Intro Cuda C++.pptx  Readme.md
ConvImage/: CMakeLists.txt  convImage.cu  convImage_method2.cu  lena.pgm  output.ppm
ImageBlur/: a.out  blurImage.cu
atomicAdd/: atomicAdd.cu
class Cuda/: CMakeLists.txt
class Cuda/include/: GPU_attribute_handler.cuh
class Cuda/src/: kernel.cu
convolution/: a.out  convolution1d_constant_memory.cu  convolution1d_naive.cu  convolution1d_shMem.cu  convolution1d_tiled.cu  convolution2d_constant_memory.cu
kernelLoop/: kernel.cu  loopsKernel.cu
matrixMul/: a.out  mmul_baseline.cu  mmul_nonMultiple.cu  mmul_rectangular.cu  mmul_tiled.cu
matrixMul/noAliasing/: a.out  mmul_restrict.cu  mmul_tmp.cu
rgb2gray/: a.out  grayImage.pgm  rgb2gray.cu
sum/: shared_mem.cu  somme.cu  vfunc_ub.cu
sum/atomics/: a.out  atomics.cpp
transpose/: transpose.cu
transpose/transpose/: transpose.sln
transpose/transpose/transpose/: kernel.cu  transpose.vcxproj
transpose/transpose/transpose/x64/Debug/: kernel.cu-497855445.deps  transpose.exe.recipe
transpose/transpose/transpose/x64/Debug/transpose.tlog/: CudaCompile.read.1u.tlog  CudaCompile.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  transpose.lastbuildstate  transpose.write.1u.tlog
transpose/transpose/x64/Debug/: transpose.exp  transpose.ilk  transpose.lib
vectorAdd/: add2Vect.cu  kernel.cu  vectorAdd.cu  vectorAdd_pinned.cu  vectorAdd_um_baseline.cu  vectorAdd_um_prefetch.cu
